--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,33 +1,9 @@
 version: 2
 jobs:
   test:
-    docker:
-    # using custom image, see .circleci/images/primary/Dockerfile
-    - image: circleci/cci-demo-docker-primary:0.0.2
-    working_directory: /go/src/github.com/circleci/cci-demo-docker
-
+    machine: true
     steps:
     - checkout
-
-    # This should go into custom primary image, here's only for the sake of explanation
-    - run:
-        name: Install Docker client
-        command: |
-          set -x
-          VER="18.09.1-ce"
-          curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
-          tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-          mv /tmp/docker/* /usr/bin
-    # This should go into custom primary image, here's only for the sake of explanation
-    - run:
-        name: Install Docker Compose
-        command: |
-          set -x
-          curl -L https://github.com/docker/compose/releases/download/1.23.1/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
-          chmod +x /usr/local/bin/docker-compose
-    - run:
-        name: Build service
-        command: make
 
     - run:
         name: Start container and verify it's working
